cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug217470.cpp
struct bug217470_d;

template<typename N, typename TAG = struct bug217470_d>
void bug217470_foo()
{
}